<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="8dp"
    tools:context=".ui.scanner.ScannerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_default"
                android:paddingTop="@dimen/padding_default"
                android:paddingEnd="@dimen/padding_default">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txtTitleCard"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/texto_scanner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtId"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:padding="@dimen/padding_min"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/purple_200"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitleCard" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:paddingTop="@dimen/padding_min"
                    android:text="@string/escanear"
                    app:iconPadding="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtId"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Aldo Efrain Arreola Martinez"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageView
            android:id="@+id/imagePerfil"
            android:layout_width="72dp"
            android:layout_height="61dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre"
            tools:src="@tools:sample/avatars" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="342dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePerfil" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/edad"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:text="@string/sexo"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintStart_toEndOf="@+id/tvEdad"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/sangre"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            tools:text="20 años"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEdad" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="12dp"
            tools:text="masculino"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSangre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="o+"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toEndOf="@+id/tvSexo"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="342dp"
            android:layout_height="1dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSexo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/telefono"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTelefono1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            tools:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView15"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="Telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTelefono3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/montserrat_medium"
            tools:text="TextView"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:text="Dirección"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCall2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDireccion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            tools:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="Direccion"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDireccion1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_bold"
            tools:text="Telefono"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTelefono2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            tools:text="TextView"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/tvTelefono1"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCall"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#03DA76"
            app:icon="@drawable/ic_local"
            app:iconGravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTelefono1"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCall2"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="144dp"
            android:backgroundTint="#03DA76"
            app:icon="@drawable/ic_local"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTelefono2"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCall3"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#03DA76"
            app:icon="@drawable/ic_local"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTelefono3"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDireccion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            tools:text="TextView"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>